--- a/HCML_2019/requirements.txt
+++ b/HCML_2019/requirements.txt
@@ -1,6 +1,6 @@
-fat-forensics==0.0.2
+fat-forensics>=0.0.2
 matplotlib==3.1.0
-numpy==1.16.4
+numpy==1.17.3
 scikit-learn==0.21.1
-scipy==1.3.0
+scipy==1.4.1
 watermark==1.8.2
