--- a/.nbval_sanitize_file.cfg
+++ b/.nbval_sanitize_file.cfg
@@ -11,5 +11,21 @@ regex: \d{2}:\d{2}:\d{2}
 replace: TIME-STAMP
 
 [regex4]
-regex: CPython\s3.7.\d
+regex: CPython\s3.7.\d+
 replace: PYTHON-3.7.X
+
+[regex5]
+regex: ^(/[^/]+)+/python3.7
+replace: PYTHON-PATH
+
+[regex6]
+regex: ^<matplotlib[^\n]+>$
+replace: MATPLOTLIB
+
+[regex7]
+regex: (?P<stem>\d+\.\d{3})\d*\s*
+replace: \g<stem>NUMERICAL-PRECISION
+
+[regex8]
+regex: (?P<stem>\d+\.)\s*
+replace: \g<stem>
