--- a/.github/workflows/test-notebooks.yml
+++ b/.github/workflows/test-notebooks.yml
@@ -20,6 +20,8 @@ jobs:
       with:
         python-version: 3.7
         cache: 'pip'
+    - name: Install LaTeX
+      run: sudo apt-get install -y texlive
     - name: Install dependencies 💾
       run: |
         pip install -r requirements-ci.txt
