--- a/.github/workflows/test-notebooks.yml
+++ b/.github/workflows/test-notebooks.yml
@@ -22,6 +22,7 @@ jobs:
         cache: 'pip'
     - name: Install LaTeX
       run: |
+        sudo apt-get update
         sudo apt-get install -y \
           dvipng \
           texlive \
