Interpretable representations code (#2)
* Travis CI --> GitHub Actions
* Interpretable representation experiments
* Tabular IR experiments
* Testing
* Scripts path fix
* Ignore figures when testing
* LaTeX deps
* LaTeX packages
* dvipng package
* Image experimental data pickle compress
* GPU support for the experiments
* Support different pickle file names
* Consistent figure labelling
* Tabular experiments expansion
* apt get fix
* Global tree local sample evaluation
* Scaling

resolves #1

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# MacOS
 *.DS_Store
+
+# Python
 *.ipynb_checkpoints
+__pycache__
+*.pickle
+*.pkl
+
+# Artefacts
+**/scripts/*.py
+**/_figures
 *.pdf
+*.zip
