--- a/.github/workflows/test-notebooks.yml
+++ b/.github/workflows/test-notebooks.yml
@@ -47,3 +47,5 @@ jobs:
       run: pytest --nbval HCML_2019/ --sanitize-with .nbval_sanitize_file.cfg
     - name: Test DAMI 2021
       run: pytest --nbval DAMI_2021/ --sanitize-with .nbval_sanitize_file.cfg
+    - name: Test AAAI 2023
+      run: pytest --nbval AAAI_2023/ --sanitize-with .nbval_sanitize_file.cfg
