--- a/.binder/requirements.txt
+++ b/.binder/requirements.txt
@@ -1,3 +1,3 @@
 -r ../HCML_2019/requirements.txt
 -r ../DAMI_2021/requirements.txt
--r ../AAAI_2023/requirements.txt
+-r ../IJCAI_2023/requirements.txt
