Match Python path mid-output stream

--- a/.nbval_sanitize_file.cfg
+++ b/.nbval_sanitize_file.cfg
@@ -15,7 +15,7 @@ regex: CPython\s3.7.\d+
 replace: PYTHON-3.7.X
 
 [regex5]
-regex: ^(/[^/]+)+/python3.7
+regex: (/[^/]+)+/python3.7
 replace: PYTHON-PATH
 
 [regex6]
