Improved numerical precision in tests

--- a/.nbval_sanitize_file.cfg
+++ b/.nbval_sanitize_file.cfg
@@ -27,5 +27,9 @@ regex: (?P<stem>\d+\.\d{3})\d*\s*
 replace: \g<stem>NUMERICAL-PRECISION
 
 [regex8]
+regex: (?P<stem>\d+\.\d{3})\d*e[\+-]\d+\s*
+replace: \g<stem>NUMERICAL-PRECISION
+
+[regex9]
 regex: (?P<stem>\d+\.)\s*
 replace: \g<stem>
