--- a/.nbval_sanitize_file.cfg
+++ b/.nbval_sanitize_file.cfg
@@ -23,11 +23,11 @@ regex: ^<matplotlib[^\n]+>$
 replace: MATPLOTLIB
 
 [regex7]
-regex: (?P<stem>\d+\.\d{3})\d*\s*
-replace: \g<stem>NUMERICAL-PRECISION
+regex: \d+\.\d+e[\+-]\d+\s*
+replace: E-NUMERICAL-PRECISION
 
 [regex8]
-regex: (?P<stem>\d+\.\d{3})\d*e[\+-]\d+\s*
+regex: (?P<stem>\d+\.\d{3})\d*\s*
 replace: \g<stem>NUMERICAL-PRECISION
 
 [regex9]
