--- a/.nbval_sanitize_file.cfg
+++ b/.nbval_sanitize_file.cfg
@@ -15,7 +15,7 @@ regex: CPython\s3.7.\d+
 replace: PYTHON-3.7.X
 
 [regex5]
-regex: ^(/[^/]+)+/python3.7
+regex: (/[^/]+)+/python3.7
 replace: PYTHON-PATH
 
 [regex6]
@@ -23,9 +23,13 @@ regex: ^<matplotlib[^\n]+>$
 replace: MATPLOTLIB
 
 [regex7]
-regex: (?P<stem>\d+\.\d{3})\d*\s*
-replace: \g<stem>NUMERICAL-PRECISION
+regex: \d+\.\d+e[\+-]\d+\s*
+replace: E-NUMERICAL-PRECISION
 
 [regex8]
+regex: (?P<stem>\d+\.\d{2})\d*\s*
+replace: \g<stem>NUMERICAL-PRECISION
+
+[regex9]
 regex: (?P<stem>\d+\.)\s*
 replace: \g<stem>
