Sampled ratio notebook test regex

--- a/.nbval_sanitize_file.cfg
+++ b/.nbval_sanitize_file.cfg
@@ -33,3 +33,7 @@ replace: \g<stem>NUMERICAL-PRECISION
 [regex9]
 regex: (?P<stem>\d+\.)\s*
 replace: \g<stem>
+
+[regex10]
+regex: Sampled data predicted class ratio:\s*{\s*(?P<c1a>\d):\s+(?P<c1b>\d?\d?)\d\d,\s+(?P<c2a>\d):\s+(?P<c2b>\d?\d?)\d\d,\s+(?P<c3a>\d):\s+(?P<c3b>\d?\d?)\d\d\s*}
+replace: Sampled data predicted class ratio: {\g<c1a>: \g<c1b>XX, \g<c2a>: \g<c2b>XX, \g<c3a>: \g<c3b>XX}
